# Hardware-and-system-viewer

./: CMakeLists.txt  README.md  resources.qrc  testStyleSheets.css
src/: CMakeLists.txt  aboutwindow.cpp  aboutwindow.h  datacollector.cpp  datacollector.h  datahandler.cpp  datahandler.h  datahandlertohtml.cpp  datahandlertohtml.h  datasaver.cpp  datasaver.h  filesystemworkmodule.cpp  filesystemworkmodule.h  main.cpp  mainwindow.cpp  mainwindow.h  outerfileincluder.cpp  outerfileincluder.h  systemdatacollector.cpp  systemdatacollector.h  webengineview.cpp  webengineview.h  windowsoptions.cpp  windowsoptions.h
